--- a/frontend/app-notas/src/index.css
+++ b/frontend/app-notas/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.containerPrincipal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid rebeccapurple;
+  padding: 40px;
+  background-color: azure;
+}
+
+.containerSecundario {
+  text-align: center;
+}
